# health_dasboard

./: .gitignore  README.md  app.py  pyproject.toml
assets/: health-dashboard.html
data/: health_data.csv  personal_info.json  sample_daily.csv  sample_daily_v2.csv
docs/market_research/perplexity/: prompt.txt
docs/research_papers/: Calculateur du métabolisme de base et des besoins en calories.html  Non-Exercise Activity Thermogenesis in Human Energy Homeostasis - Endotext - NCBI Bookshelf.html
docs/research_papers/Calculateur du métabolisme de base et des besoins en calories_files/: 0b4715e952e1.global.css  182c31e4b049.cookieblocker.min.css  2645c94620e3.menu-addon.css  28333fff7233.style-index.css  295cf587af63.fields.css  2f90364edcb6.style-blocks-image.css  480b9e651036.popup.css  49cb279fe101.datepicker.css  4a2e101368a6.global.min.css  50d3d38c041a.jvmtb.css  549fc2a5d8e3.style-blocks-column.css  7a20740c12ff.footer.min.css  80fd67f3614d.a-z-listing-default.css  8cf71cde1500.style.min.css  9912047b8887.header.min.css  9cff4ca50421.style.min.css  a6571f9f28d6.yith-icon.css  ab32c6b91234.style.css  ade7c1009c91.blocks.style.build.css  af73b0ba42fe.style-blocks-rowlayout.css  banner-1-optin.css  bfb2dbdfc87a.style.min.css  cfc3b762dddc.booking-form.css  d11e79666e5a.date-range-picker.css  d4a6e2975a39.rate-my-post.min.css  dcc7fa5f6e0a.woocommerce.min.css  de574de929e1.frontend.css  e107974c3469.kadence-snackbar-notice.css  e3e811600e32.select2.css  ead95a41c940.jquery-ui.min.css  f977bc882562.content.min.css  fc0cc9c41852.478ce8edb9fa.google-font.css  fc90f474d997.bundle.css  ffbad0c9271a.people-selector.css  frontend.min.js  kadence-snackbar-notice.min.js  navigation.min.js  rate-my-post.min.js  tool-calculator-metabolism.js
docs/research_papers/Non-Exercise Activity Thermogenesis in Human Energy Homeostasis - Endotext - NCBI Bookshelf_files/: 1.cdb8aba7ec1fbb272b87.chunk.js  5.0cd5e970f9d6c2dd098b.chunk.js  8.a52a4b06f94496eea5cb.chunk.js  CoreModule.js  gtm.js  js  js(1)  saved_resource
docs/technical_research/: prompt_and_results.txt
docs/web_ressources/: calulator_website.txt  energy_calculator.txt
frontend/: analytics.py  app.py  data_utils.py  visualization.py
tests/: test_health_tracker.py
