
[tool.poetry]
name = "evaluation-tool"
version = "0.2.0"
description = ""
authors = ["Yannick Flores <yannick.flores@syngenta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.0"
pandas = "^2.2.2"
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
coverage = { extras = ["toml"], version = "7.2.*" }
black = { version = "23.3.*", allow-prereleases = true }
pytest = "7.4.*"
pytest-html = "3.2.*"
pytest-cov = "4.1.*"
pytest-mock = "^3.10.0"
pylint = "2.17.*"
poethepoet = "^0.29.0"
pre-commit = "^4.0.1"